[gd_scene load_steps=14 format=2]

[ext_resource path="res://global/inventory/sprites/x_pressed.png" type="Texture" id=1]
[ext_resource path="res://global/inventory/sprites/x_hover.png" type="Texture" id=2]
[ext_resource path="res://global/inventory/sprites/title.png" type="Texture" id=3]
[ext_resource path="res://global/inventory/sprites/inner_panel.png" type="Texture" id=4]
[ext_resource path="res://global/inventory/sprites/main panel.png" type="Texture" id=5]
[ext_resource path="res://global/inventory/sprites/x_disabled.png" type="Texture" id=6]
[ext_resource path="res://global/inventory/sprites/x_normal.png" type="Texture" id=7]
[ext_resource path="res://invRes/settings.gd" type="Script" id=8]
[ext_resource path="res://resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://invRes/scale_control.gd" type="Script" id=10]
[ext_resource path="res://invRes/exitBtn.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 9 )

[node name="split stack" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
mouse_filter = 2
color = Color( 0, 0, 0, 0.592157 )
script = ExtResource( 8 )
scale_slider = NodePath("settings/setting list/scale/HSlider")
fullscreen_check = NodePath("settings/setting list/fullscreen/CheckBox")
lbl_min = NodePath("settings/setting list/scale/min")
lbl_max = NodePath("settings/setting list/scale/max")
lbl_cur = NodePath("settings/setting list/scale/current")

[node name="settings" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -57.0
margin_right = 72.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 72, 57 )
mouse_filter = 1
texture = ExtResource( 5 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource( 10 )

[node name="title" type="NinePatchRect" parent="settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_top = -11.0
margin_right = 40.0
margin_bottom = 7.0
mouse_filter = 1
texture = ExtResource( 3 )
patch_margin_left = 8
patch_margin_top = 6
patch_margin_right = 8
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="settings/title"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
custom_colors/font_color = Color( 0.301961, 0.34902, 0.4, 1 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="TextureButton" parent="settings"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -9.0
margin_bottom = 9.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="setting list" type="VBoxContainer" parent="settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 10.0
margin_right = -9.0
margin_bottom = -5.0
custom_constants/separation = 2

[node name="scale" type="NinePatchRect" parent="settings/setting list"]
margin_right = 126.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current" type="Label" parent="settings/setting list/scale"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_top = 4.0
margin_right = 59.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 161, 54 )
custom_colors/font_color = Color( 0.423529, 0.247059, 0.121569, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="min" type="Label" parent="settings/setting list/scale"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -56.0
margin_top = 4.0
margin_right = -24.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.423529, 0.247059, 0.121569, 1 )
custom_fonts/font = SubResource( 2 )
text = "Min: #"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max" type="Label" parent="settings/setting list/scale"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 25.0
margin_top = 4.0
margin_right = 57.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.423529, 0.247059, 0.121569, 1 )
custom_fonts/font = SubResource( 2 )
text = "Max: #"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="settings/setting list/scale"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -6.0
margin_right = -6.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 147, 51 )
min_value = 1.0
max_value = 2.0
step = 0.5
value = 2.0

[node name="fullscreen" type="NinePatchRect" parent="settings/setting list"]
margin_top = 32.0
margin_right = 126.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 30 )
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="settings/setting list/fullscreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_top = 4.0
margin_right = 59.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.423529, 0.247059, 0.121569, 1 )
custom_fonts/font = SubResource( 2 )
text = "- Fullscreen -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="settings/setting list/fullscreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -8.14029
margin_right = 12.0
margin_bottom = 15.8597
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="NinePatchRect" parent="settings/setting list"]
margin_top = 64.0
margin_right = 126.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 30 )
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitBtn" type="Button" parent="settings/setting list/exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = 5.0
margin_right = -43.0
margin_bottom = -5.0
rect_pivot_offset = Vector2( 104, 20 )
text = "Exit"
script = ExtResource( 11 )

[connection signal="pressed" from="settings/close" to="." method="_on_close_pressed"]
[connection signal="gui_input" from="settings/setting list/scale/HSlider" to="." method="_on_scale_slider_gui_input"]
[connection signal="toggled" from="settings/setting list/fullscreen/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="settings/setting list/exit/exitBtn" to="settings/setting list/exit/exitBtn" method="_on_exitBtn_pressed"]
